@@ -5,7 +5,8 @@
  - new preference for show/hide copyright (goffy)
  - fixed bug with upload very big jpg images (goffy)
  - fixed bug with cropping images (goffy)
- - added option to resize image during upload or not (goffy) 
+ - added option to resize image during upload or not (goffy)
+ - added new block style 'list' (goffy)
  
 <h5>1.09 RC2</h5> [2019/04/09]
 <hr>
